# menagerie-modules

./: .gitmodules  LICENSE  README.md  cuckoo.py  editdistance.py  fuzzy.py  htmlparser.py  ida.py  jar.py  misp.py  pdf.py  pdns.py  pssl.py  pyproject.toml  radiff2.py  rat.py  requirements-dev.txt.old  requirements.txt  requirements.txt.org  snoopdroid.py  triage.py  yarascan.py
misp_methods/: admin.py  download.py  open.py  store.py
needing_rewritten/: apk.py  clamav.py  debup.py  elf.py  emailparse.py  exif.py  idx.py  image.py  joesandbox.py  koodous.py  lastline.py  lief.py  macho.py  office.py  pe.py  pst.py  radare.py  rtf.py  scraper.py  shellcode.py  size.py  strings.py  swf.py  typing-3.7.4.3-py3-none-any.whl  vbin.py  virustotal.py  xor.py
needing_rewritten/misp_methods/: add.py  check_hashes.py  create_event.py  galaxies.py  tag.py  version.py
needing_rewritten/pehash/: pehasher.py
needing_rewritten/rats/: xtreme.py
pehash/: __init__.py
rats/: unrecom.py
sigs_helper/: sigs_helper.py
