[project]
name = "menagerie-modules"
version = "0.1.0"
description = ""
authors = [
    {name = "Steven Dumolt",email = "steven@secopsninja.org"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "yara-python (>=4.5.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
